DeveloperOrg/force-app/main/default/objects/candidate__c/candidate__c.object-meta.xml
<CustomObject>
    <label>candidate</label>
    <nameField>
        <label>candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>