DeveloperOrg/force-app/main/default/objects/candidate__c/fields/current_CTC__c.field-meta.xml
<CustomField>
    <fullName>current_CTC__c</fullName>
    <label>current CTC</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>