DeveloperOrg/force-app/main/default/objects/candidate__c/fields/current_disganation__c.field-meta.xml
<CustomField>
    <fullName>current_disganation__c</fullName>
    <label>current disganation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>