DeveloperOrg/force-app/main/default/objects/candidate__c/fields/current_employee__c.field-meta.xml
<CustomField>
    <fullName>current_employee__c</fullName>
    <label>current employee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>