DeveloperOrg/force-app/main/default/objects/candidate__c/fields/expeted_ctc__c.field-meta.xml
<CustomField>
    <fullName>expeted_ctc__c</fullName>
    <label>expeted ctc</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>