DeveloperOrg/force-app/main/default/objects/candidate__c/fields/hiring_manger__c.field-meta.xml
<CustomField>
    <fullName>hiring_manger__c</fullName>
    <label>hiring manger</label>
    <referenceTo>hiring_manger__c</referenceTo>
    <relationshipLabel>candidates</relationshipLabel>
    <relationshipName>candidates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>