DeveloperOrg/force-app/main/default/objects/candidate__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Id</label>
    <type>AutoNumber</type>
</CustomField>