DeveloperOrg/force-app/main/default/objects/candidate__c/fields/noticed__c.field-meta.xml
<CustomField>
    <fullName>noticed__c</fullName>
    <label>noticed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate,</fullName>
            </value>
            <value>
                <fullName>1 Week,</fullName>
            </value>
            <value>
                <fullName>15 Days,</fullName>
            </value>
            <value>
                <fullName>1 Month,</fullName>
            </value>
            <value>
                <fullName>2 Months,</fullName>
            </value>
            <value>
                <fullName>3 Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>