DeveloperOrg/force-app/main/default/objects/candidate__c/fields/Pan_number__c.field-meta.xml
<CustomField>
    <fullName>Pan_number__c</fullName>
    <label>Pan number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>