DeveloperOrg/force-app/main/default/objects/candidate__c/fields/position__c.field-meta.xml
<CustomField>
    <fullName>position__c</fullName>
    <label>position</label>
    <referenceTo>position__c</referenceTo>
    <relationshipLabel>candidates</relationshipLabel>
    <relationshipName>candidates</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>