DeveloperOrg/force-app/main/default/objects/candidate__c/fields/qualification__c.field-meta.xml
<CustomField>
    <fullName>qualification__c</fullName>
    <label>qualification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B.Tech</fullName>
            </value>
            <value>
                <fullName>B.E</fullName>
            </value>
            <value>
                <fullName>M.Tech,</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>M.Sc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>