DeveloperOrg/force-app/main/default/objects/candidate__c/fields/techncial_skill__c.field-meta.xml
<CustomField>
    <fullName>techncial_skill__c</fullName>
    <label>techncial skill</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSS</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>JAVA</fullName>
            </value>
            <value>
                <fullName>PHYTON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>